--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   path_provider: ^2.0.11
+  uuid: ^3.0.6
+  hive_flutter: ^1.1.0
   # firebase_auth: ^3.6.4
   # firebase_core: ^1.21.0
   hive: ^2.2.3
