--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   path_provider: ^2.0.11
   uuid: ^3.0.6
   hive_flutter: ^1.1.0
-  # firebase_auth: ^3.6.4
-  # firebase_core: ^1.21.0
+  firebase_auth: ^3.6.4
+  firebase_core: ^1.21.0
   hive: ^2.2.3
 
 
